Adding lights script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "onoff": "^1.1.8",
-    "aws-iot-device-sdk": "^2.1.0"
+    "aws-iot-device-sdk": "^2.1.0",
+    "rpi-ws281x-native":"*"
   },
   "author": "",
   "license": "ISC"
