adding config with hardcoded secrets (dont do this). and updating package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "onoff": "^1.1.8",
     "aws-iot-device-sdk": "^2.1.0",
-    "rpi-ws281x-native":"*",
-    "aws-sdk": "*"
+    "rpi-ws281x-native":"^0.8.1",
+    "aws-sdk": "^2.143.0"
   },
   "author": "",
   "license": "ISC"
